jfuture->jeeconf :) Java 10 -> Java 11