@@ -1,6 +1,5 @@
-module by.jfuture.tomatosKillerPi {
-	exports by.jfuture.tomatos.killer.pi;
-	exports by.jfuture.tomatos.killer.pi.servo;
-
-	requires jdk.incubator.httpclient;
+module com.jeeconf.tomatosKillerPi {
+	exports com.jeeconf.tomatos.killer.pi;
+	exports com.jeeconf.tomatos.killer.pi.servo;
+	requires java.net.http;
 }
